<resources>
    <string name="app_name">Find My Meal</string>
    <string name="roll">Roll</string>
    <string name="find_meal">Find my meal!</string>

    <string name="category_rolled">You rolled the category…</string>
    <string name="category_unrolled">Press the button to roll a category</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="dish_picture">Dish picture</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="closed">Closed</string>
    <string name="open">Open now</string>
    <string name="youtube_guide">Youtube guide</string>
    <string name="source">Source</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="no_favorites">No favorites added</string>
    <string name="see_favorite_recipes">See favorite recipes</string>
</resources>
